[package]
name = "turbolift"
version = "0.1.0"
authors = ["Dominic Burkart <@DominicBurkart>"]
edition = "2018"
description = "WIP"
readme = "README.md"
license = "Hippocratic-2.1"

[features]
distributed = ["chrono", "turbolift_macros/distributed"]
# todo we can optimize reqs for children with this load

[dependencies]
turbolift_macros = { path = "./turbolift_macros" }
turbolift_internals = { path = "./turbolift_internals" }
chrono = { version = "0.4", optional = true }
actix-web = { version = "3" }
serde_json = { version = "1" }
tokio-compat-02 = { version = "0.1" }
