[package]
name = "turbolift"
version = "0.1.1"
authors = ["Dominic Burkart <@DominicBurkart>"]
edition = "2018"
description = "Easy distribution interface"
keywords = ["distribution", "distributed", "kubernetes", "K8s"]
categories = ["build-utils", "development-tools", "concurrency", "network-programming", "asynchronous"]
readme = "README.md"
homepage = "https://dominic.computer/turbolift"
license = "Hippocratic-2.1"
repository = "https://github.com/dominicburkart/turbolift/"

[features]
distributed = ["chrono", "turbolift_macros/distributed"]
# todo we can optimize reqs for children with this load

[dependencies]
turbolift_macros = { path = "./turbolift_macros", version="0.1.1" }
turbolift_internals = { path = "./turbolift_internals", version="0.1.1" }
chrono = { version = "0.4", optional = true }
actix-web = { version = "3" }
serde_json = { version = "1" }
tokio-compat-02 = { version = "0.1" }
tracing = {version="0.1", features=["attributes"]}
tracing-futures = "0.2.4"
