[package]
name = "turbolift_internals"
version = "0.1.8"
authors = ["Dominic Burkart <@DominicBurkart>"]
edition = "2018"
description = "macros for turbolift"
homepage = "https://dominic.computer/turbolift"
license = "Hippocratic-2.1"
repository = "https://github.com/dominicburkart/turbolift/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features=["full"] }
quote = "1"
serde = "1"
serde_json = "1"
brotli2 = "0.3.2"
data-encoding = "2"
futures = "0.3"
proc-macro2 = { version = "1", features = ["span-locations"]}
tar = "0.4"
toml = "0.5"
cargo-toml2 = "1"
tempfile = "3.1"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.1"
cute = "0.3"
rand = "0.7"
url = "2"
lazy_static = "1"
anyhow = "1"
cached = "0.19"
async-trait = "0.1"
get_if_addrs = "0.5.3"
regex = "1"
tracing = {version="0.1", features=["attributes"]}
tracing-futures = "0.2.4"
uuid = { version="0.8", features=["v4"] }
derivative = "2.2.0"

# kubernetes-specific requirements
kube = "0.51.0"
kube-runtime = "0.51.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }

[package.metadata.playground]
features = ["span-locations"]

[package.metadata.docs.rs]
 rustc-args = ["--cfg", "procmacro2_semver_exempt"]
 rustdoc-args = ["--cfg", "procmacro2_semver_exempt"]

[patch.crates-io]
turbolift_internals = { path = "." }
