[package]
name = "turbolift_macros"
version = "0.1.0"
authors = ["Dominic Burkart <1351120+DominicBurkart@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
fs_extra = "1"
rust-embed= { version="5", features=["debug-embed", "compression"]}
turbolift_internals = { path="../turbolift_internals" }
futures = "0.3"