[package]
name = "turbolift_macros"
version = "0.1.1"
authors = ["Dominic Burkart <1351120+DominicBurkart@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
"distributed" = []

[dependencies]
quote = "1"
proc-macro2 = "1"
fs_extra = "1"
turbolift_internals = { path="../turbolift_internals", version="0.1.1"}
futures = "0.3"
cached = "0.19"
tracing = {version="0.1", features=["attributes"]}
tracing-futures = "0.2.4"
syn = { version = "1", features=["full"] }

[package.metadata.playground]
features = ["span-locations"]

[package.metadata.docs.rs]
 rustc-args = ["--cfg", "procmacro2_semver_exempt"]
 rustdoc-args = ["--cfg", "procmacro2_semver_exempt"]

[patch.crates-io]
turbolift_macros = { path = "." }
