[package]
name = "turbolift_macros"
version = "0.1.8"
authors = ["Dominic Burkart <@DominicBurkart>"]
edition = "2018"
description = "macros for turbolift"
homepage = "https://dominic.computer/turbolift"
license = "Hippocratic-2.1"
repository = "https://github.com/dominicburkart/turbolift/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
"distributed" = []

[dependencies]
quote = "1"
proc-macro2 = "1"
fs_extra = "1"
turbolift_internals = { path="../turbolift_internals", version="0.1.5"}
futures = "0.3"
cached = "0.19"
tracing = {version="0.1", features=["attributes"]}
tracing-futures = "0.2.4"
syn = { version = "1", features=["full"] }

[package.metadata.playground]
features = ["span-locations"]

[package.metadata.docs.rs]
 rustc-args = ["--cfg", "procmacro2_semver_exempt"]
 rustdoc-args = ["--cfg", "procmacro2_semver_exempt"]

[patch.crates-io]
turbolift_macros = { path = "." }
