[package]
name = "kubernetes_example"
version = "0.1.0"
authors = ["Dominic Burkart <1351120+DominicBurkart@users.noreply.github.com>"]
edition = "2018"

[features]
"distributed" = ["turbolift/distributed"]

[dependencies]
rand = "0.7"
tokio = {version="0.2.22", features=["full"]}
lazy_static = "1"
futures = "0.3"
cute = "0.3"
turbolift = { path="../../" }
