[package]
name = "local_queue_example"
version = "0.1.0"
authors = ["Dominic Burkart <1351120+DominicBurkart@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
futures = "0.3"
turbolift = { path="../../" }
turbolift_macros = { path="../../turbolift_macros" }