[package]
name = "local_queue_example"
version = "0.1.0"
authors = ["Dominic Burkart <1351120+DominicBurkart@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
"distributed" = ["turbolift/distributed"]

[dependencies]
rand = "0.7"
futures = "0.3"
lazy_static = "1"
tokio = {version="0.2.22", features=["full"]}
turbolift = { path="../../" }

# these are dependencies that need to be bundled into turbolift, but debugging how to reexport proc macros is hard.
cached = "0.19"
