[package]
name = "local_queue_example"
version = "0.1.0"
authors = ["Dominic Burkart <1351120+DominicBurkart@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
"distributed" = ["turbolift/distributed"]

[dependencies]
rand = "0.7"
futures = "0.3"
lazy_static = "1"
tokio = {version="1", features=["full"]}
turbolift = { path="../../" }

# for printing out tracing
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = {version="0.2", features=["fmt"]}
